manifests-new/07_app_custom/05_secret/04_tls_termination_proxy/mynapp-ing-tls-term.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: myapp-ing-tls-term
spec:
  tls:
  - hosts:
    - myapp.example.com
    secretName: myapp-tls-secret
  rules:
  - host: myapp.example.com
    http:
      paths:
      - path: /
        backend: 
          serviceName: myapp-svc-np
          servicePort: 80
